# steamworks-example

./: .gitmodules  windows-setup.md
.github/workflows/: build.yml  release.yml  test.yml
build-conan/: .gitignore  Makefile  README.md  conanfile.py  meson.build  notes.md  patchElfShared.sh  shell.nix
build-conan/conan-profiles/: nixprofile  zigprofile
build-conan/conan-recipes/: update-recipes.sh
build-conan/conan-recipes/libglvnd/: config.yml
build-conan/conan-recipes/libglvnd/system/: conanfile.py
build-conan/conan-recipes/sdl/all/: conanfile.py
build-conan/conan-recipes/xorg/all/: conanfile.py
build-conan/docker/: Dockerfile  docker-compose.yml
build-make/: Makefile  flags.mak  shell.nix
build-meson/: README  shell.nix
build-meson/subprojects-unused/: .gitignore  meson.build  openal-soft.wrap  sdl2.wrap  sdl2_ttf.wrap
build-meson/subprojects-unused/wrapsdl/: .gitignore  meson.build
build-meson/subprojects-unused/wrapsdlttf/: meson.build
src/: BaseMenu.h  Main.cpp  StatsAndAchievements.cpp  gameenginesdl.cpp  gameenginesdl.h  stdafx.cpp  stdafx.h
